[package]
name = "audioplayer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "audioplayer"
path = "src/main.rs"

[dependencies]
eframe = "0.28"
egui = "0.28"
cpal = "0.15"
symphonia = { version = "0.5", features = ["all"] }
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# Required for cpal on macOS
[target.'cfg(target_os = "macos")'.dependencies]
